[project]
name = "qwen3-tts-apple-silicon"
version = "0.1.0"
description = "Qwen3 TTS application for Apple Silicon"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]